--- a/starter/package.json
+++ b/starter/package.json
@@ -1,7 +1,8 @@
 {
   "name": "protractor_example",
   "dependencies": {
-    "jasmine-spec-reporter": "2.7.0"
+    "jasmine-spec-reporter": "2.7.0",
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
